@@ -3,12 +3,18 @@ package org.gametheory;
 import org.gametheory.player.Player;
 import org.gametheory.strategy.impl.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class PlayerPopulation {
+    public static List<Player> getCooperateAndDeflectPlayers() {
+        return List.of(
+                new Player(new AlwaysCooperateStrategy()),
+                new Player(new AlwaysDeflectStrategy())
+        );
+    }
+
     public static List<Player> getMixedButUniquePlayers() {
-        return Arrays.asList(
+        return List.of(
                 new Player(new AlwaysCooperateStrategy()),
                 new Player(new AlwaysDeflectStrategy()),
                 new Player(new OnlyRetaliateIfAttackedStrategy()),
@@ -19,7 +25,7 @@ public class PlayerPopulation {
     }
 
     public static List<Player> getOnlyNicePlayers() {
-        return Arrays.asList(
+        return List.of(
                 new Player(new AlwaysCooperateStrategy()),
                 new Player(new OnlyRetaliateIfAttackedStrategy()),
                 new Player(new OnlyRetaliateIfAttackedConsecutivelyStrategy())
